@@ -1,3 +1,11 @@
+2014-02-27  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Unreviewed build fix after r164824.
+
+        Accidentally re-added some code that was removed.
+
+        * page/ContentSecurityPolicy.cpp:
+
 2014-02-26  Alex Christensen  <achristensen@webkit.org>
 
         Compile fix when not using TEXTURE_MAPPER_GL.
